[package]
name = "noise_cancelling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7"
cgmath = "0.17.0"
rustfft = "6.0.1"
poloto = "16.0.0"
spectrum-analyzer = "1.2.6"
rand = "0.8.5"
